--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "xmonad"]
 	path = xmonad
+	branch = master
 	url = https://github.com/xmonad/xmonad.git
 [submodule "xmonad-contrib"]
 	path = xmonad-contrib
+	branch = master
 	url = https://github.com/xmonad/xmonad-contrib.git
