--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = xmonad-contrib
 	branch = master
 	url = https://github.com/xmonad/xmonad-contrib.git
+[submodule "X11"]
+	path = X11
+	url = https://github.com/xmonad/X11.git
