--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-17.13
+resolver: lts-17.14
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -29,6 +29,7 @@ resolver: lts-17.13
 #   - auto-update
 #   - wai
 packages:
+  - X11
   - xmonad
   - xmonad-contrib
 # Dependency packages to be pulled from upstream that are not in the resolver.
@@ -40,9 +41,7 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-extra-deps:
-  - github: xmonad/X11
-    commit: master
+# extra-deps: []
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
@@ -55,7 +54,7 @@ system-ghc: true
 #
 # Require a specific version of stack, using version ranges
 # require-stack-version: -any # Default
-# require-stack-version: ">=2.5"
+# require-stack-version: ">=2.7"
 #
 # Override the architecture used by stack, especially useful on Windows
 # arch: i386
@@ -66,4 +65,4 @@ arch: x86_64
 # extra-lib-dirs: [/path/to/dir]
 #
 # Allow a newer minor version of GHC than the snapshot specifies
-compiler-check: newer-minor
+# compiler-check: newer-minor
