--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-17.15
+resolver: lts-18.0
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -71,5 +71,4 @@ arch: x86_64
 # compiler-check: newer-minor
 
 ghc-options:
-  xmonad: "-threaded -j"
-  xmonad-contrib: "-threaded -j"
+  "$everything": -haddock -threaded -j
