--- a/build
+++ b/build
@@ -1,5 +1,7 @@
 #!/bin/sh
 
+set -e
+
 exec stack ghc --  \
   --make xmonad.hs \
   -i               \
@@ -7,4 +9,5 @@ exec stack ghc --  \
   -fforce-recomp   \
   -main-is main    \
   -v0              \
+  -j$(nproc)       \
   -o "$1"
