--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # Recompile
-cd "$XMONAD_CONFIG_DIR" && stack build || exit
+cd "$XMONAD_CONFIG_DIR" && stack install || exit
 
 # Create a hard link at the requested destination, replacing any existing one.
 ln -f -T "$(stack exec -- which xmonad)" "$1"
