cleaned up xmobar config

--- a/package.yaml
+++ b/package.yaml
@@ -6,23 +6,24 @@ author: Atif
 maintainer: iftakhar.awal@yahoo.com
 homepage: https://github.com/AtifChy/dotfiles
 
-ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j
+ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j -dynamic
 
 dependencies:
   - base
-  - containers
-  - unix
-  - xmobar
-  - xmonad
   - xmonad-contrib >= 0.16
-  - X11
-  - utf8-string
 
 source-dirs: src
 
 executables:
   xmonad:
     main: xmonad.hs
+    dependencies:
+      - xmonad
+      - containers
+      - X11 >= 1.10
+    ghc-options:  -Wno-missing-signatures
   xmobar:
     main: xmobar.hs
+    dependencies:
+      - xmobar
     ghc-options: -rtsopts -threaded -with-rtsopts=-N
