--- a/xmonad-atif.cabal
+++ b/xmonad-atif.cabal
@@ -22,15 +22,10 @@ executable xmobar
       Paths_xmonad_atif
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j -rtsopts -threaded -with-rtsopts=-N
+  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j -dynamic -rtsopts -threaded -with-rtsopts=-N
   build-depends:
-      X11
-    , base
-    , containers
-    , unix
-    , utf8-string
+      base
     , xmobar
-    , xmonad
     , xmonad-contrib >=0.16
   default-language: Haskell2010
 
@@ -42,14 +37,11 @@ executable xmonad
       Paths_xmonad_atif
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j
+  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j -dynamic -Wno-missing-signatures
   build-depends:
-      X11
+      X11 >=1.10
     , base
     , containers
-    , unix
-    , utf8-string
-    , xmobar
     , xmonad
     , xmonad-contrib >=0.16
   default-language: Haskell2010
