added weather module & updated the icons

--- a/package.yaml
+++ b/package.yaml
@@ -4,7 +4,7 @@ synopsis: My xmonad configuration.
 license: MIT
 author: Atif
 maintainer: iftakhar.awal@yahoo.com
-homepage: https://github.com/AtifChy/dotfiles
+homepage: https://github.com/AtifChy/xmonad
 
 ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j -dynamic
 
