--- a/stack.yaml
+++ b/stack.yaml
@@ -46,7 +46,7 @@ extra-deps:
   - github: xmonad/xmonad
     commit: master@{now}
   - github: xmonad/xmonad-contrib
-    commit: master@{now}
+    commit: 5d0a3de24dae6035acb4426ff54748aa77e99d94
   - xmobar-0.38
 
 # Override default flag values for local packages and extra-deps
